Fixing dropdown alignment

--- a/frontend/styles/translation_ui.css
+++ b/frontend/styles/translation_ui.css
@@ -53,7 +53,8 @@ html, body {
 .select-block {
   display: flex;
   flex-direction: column;
-  width: 10rem;
+  flex: 1;
+  align-items: center;
 }
 
 .select-block label {
